RIP-v9.5- /mobile overflow fix nin progress

--- a/css/onboarding.css
+++ b/css/onboarding.css
@@ -1,7 +1,5 @@
 .onboarding-Space {
   display: flex;
-  width  : 100%;
-  height : 100vh !important;
 }
 
 .onboardingSteps-Space {
