--- a/css/styles.css
+++ b/css/styles.css
@@ -1111,7 +1111,7 @@ h5 {
   align-items     : center;
   justify-content : flex-start;
   width           : 100%;
-  height          : 100%;
+  height          : auto;
   margin          : 0px;
   grid-gap        : 0px;
   background-color: #e2ddff;
